<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.shoestore.ShoeData" />
    </data>

    <!-- CONSTRAINT -> TO HANDLE ALL VIEWS, TO FEEL FREE MOVING THEM AS I WANT AND ATTACH THEM TO EACH OTHER -->

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/constraintMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/name_label"
            style="@style/AppTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/company_label"
            app:layout_constraintEnd_toStartOf="@+id/name_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.item.name}"/>

        <TextView
            android:id="@+id/company_label"
            style="@style/AppTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintBottom_toTopOf="@+id/size_label"
            app:layout_constraintEnd_toStartOf="@+id/company_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <EditText
            android:id="@+id/company_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/company"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.item.company}"/>

        <TextView
            android:id="@+id/size_label"
            style="@style/AppTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/description_label"
            app:layout_constraintEnd_toStartOf="@+id/size_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <EditText
            android:id="@+id/size_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/size"
            android:inputType="number|text"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.item.size}"/>


        <TextView
            android:id="@+id/description_label"
            style="@style/AppTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.item.description}"/>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>