<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/constraintMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lets_go_text"
            android:layout_width="178dp"
            android:layout_height="58dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/lily_script_one"
            android:text="@string/lets_go"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/go_instruction_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lily_script_one"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/lets_go_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002" />

        <Button
            android:id="@+id/go_instruction_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go_to_instructions"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lets_go_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>